--- a/frontend/src/blocks/popup/_login/popup_login.css
+++ b/frontend/src/blocks/popup/_login/popup_login.css
@@ -5,3 +5,9 @@
   display: flex;
   height: calc(100vh - 270px);
 }
+
+@media screen and (max-width: 768px) {
+  .popup_login {
+    height: calc(100vh - 180px);
+  }
+}
